 add_executable(SequenceQueue_1 Chapter4_Queue/SequenceQueue/SequenceQueue_1.c Chapter4_Queue/SequenceQueue/SequenceQueue_2.c)
 add_executable(SequenceStack_1 Chapter3_Stack/SequenceStack/SequenceStack_1.c)
 add_executable(LinkListQueue_1 Chapter4_Queue/LinkQueue/LinkQueue_1.c)
 add_executable(LoopQueue_1 Chapter4_Queue/LoopQueue/LoopQueue_1.c)
 add_executable(SequenceQueue_2 Chapter4_Queue/SequenceQueue/SequenceQueue_2.c)
 add_executable(SequenceString_1 Chapter5_String/SequenceString/SequenceString_1.c)
 add_executable(1556 Chapter2_List/OJ/1-1.c)
 add_executable(1530 Chapter2_List/OJ/1-2.c)
 add_executable(2-5cpp Chapter2_List/OJ/2-5cpp.cpp)
 add_executable(2-6 Chapter2_List/OJ/2-6.c)
add_executable(2-6 Chapter2_List/OJ/2-6.c)
add_executable(3-1 Chapter2_List/OJ/3-1.c)
add_executable(3-2 Chapter2_List/OJ/3-2.c)
add_executable(3-3 Chapter2_List/OJ/3-3.c)
add_executable(3-4 Chapter2_List/OJ/3-4.c)
add_executable(3-5 Chapter2_List/OJ/3-5.cpp)
add_executable(3-6 Chapter2_List/OJ/3-6.c)
add_executable(4-1 Chapter3_Stack/OJ/4-1.cpp)
add_executable(4-2 Chapter3_Stack/OJ/4-2.cpp)
add_executable(4-3 Chapter3_Stack/OJ/4-3.cpp)