add_executable(SequenceQueue_1 Chapter4_Queue/SequenceQueue/SequenceQueue_1.c Chapter4_Queue/SequenceQueue/SequenceQueue_2.c)
add_executable(SequenceStack_1 Chapter3_Stack/SequenceStack/SequenceStack_1.c)
add_executable(LinkListQueue_1 Chapter4_Queue/LinkQueue/LinkQueue_1.c)
add_executable(LoopQueue_1 Chapter4_Queue/LoopQueue/LoopQueue_1.c)
add_executable(SequenceQueue_2 Chapter4_Queue/SequenceQueue/SequenceQueue_2.c)
add_executable(SequenceString_1 Chapter5_String/SequenceString/SequenceString_1.c)
add_executable(1556 Chapter2_List/OJ/1-1.c)
add_executable(1530 Chapter2_List/OJ/1-2.c)
add_executable(2-5cpp Chapter2_List/OJ/2-5cpp.cpp)
add_executable(2-6 Chapter2_List/OJ/2-6.c)
add_executable(2-6 Chapter2_List/OJ/2-6.c)
add_executable(3-1 Chapter2_List/OJ/3-1.c)
add_executable(3-2 Chapter2_List/OJ/3-2.c)
add_executable(3-3 Chapter2_List/OJ/3-3.c)
add_executable(3-4 Chapter2_List/OJ/3-4.c)
add_executable(3-5 Chapter2_List/OJ/3-5.cpp)
add_executable(3-6 Chapter2_List/OJ/3-6.c)
add_executable(4-1 Chapter3_Stack/OJ/4-1.cpp)
add_executable(4-2 Chapter3_Stack/OJ/4-2.cpp)
add_executable(4-3 Chapter3_Stack/OJ/4-3.cpp)
add_executable(4-4 Chapter3_Stack/OJ/4-4.cpp)
add_executable(4-5 Chapter3_Stack/OJ/4-5.cpp)
add_executable(4-6 Chapter3_Stack/OJ/4-6.cpp)
add_executable(4-7 Chapter3_Stack/OJ/4-7.c)

add_executable(4-8 Chapter3_Stack/OJ/4-8.c)
add_executable(5-1 Chapter4_Queue/OJ/5-1.cpp)
add_executable(5-2 Chapter4_Queue/OJ/5-2.cpp)
add_executable(week05_lecture1 LECTURES&LABS/Week05_LECTURE_DEMO/LinkListWithoutHeadNode.c)
add_executable(LinkListWithoutHeadNode LECTURES&LABS/Week05_LECTURE_DEMO/LinkListWithoutHeadNode.c)
add_executable(LinkListWithHeadNode LECTURES&LABS/Week05_LECTURE_DEMO/LinkListWithHeadNode.c)
add_executable(5-3 Chapter4_Queue/OJ/5-3.cpp)
add_executable(5-4 Chapter4_Queue/OJ/5-4.cpp)
add_executable(6-1 Chapter5_String/OJ/6-1.cpp)
add_executable(6-2 Chapter5_String/OJ/6-2.cpp)
add_executable(6-3 Chapter5_String/OJ/6-3.cpp)
add_executable(6-4 Chapter5_String/OJ/6-4.cpp)
add_executable(WEEK06_LECTURE1_DEMO LECTURES&LABS/WEEK06_LECTURE1_DEMO/WEEK06_LECTURE1_DEMO.cpp)
add_executable(TraverseTree_Link Chapter7_Tree/TraverseTree/TraverseTree_Link.cpp)
add_executable(8-1 Chapter7_Tree/OJ/8-1.cpp)

add_executable(TraverseTree_Array Chapter7_Tree/TraverseTree/TraverseTree_Array.c)
add_executable(8-2 Chapter7_Tree/OJ/8-2.cpp)
add_executable(9-1 Chapter7_Tree/OJ/9-1.cpp)
add_executable(9-2 Chapter7_Tree/OJ/9-2.cpp)
add_executable(9-4 Chapter7_Tree/OJ/9-4.cpp)
add_executable(9-5 Chapter7_Tree/OJ/9-5.cpp)
add_executable(9-3 Chapter7_Tree/OJ/9-3.cpp)
add_executable(temp1 Chapter7_Tree/OJ/temp1.cpp)

add_executable(10-1 Chapter7_Tree/OJ/10-1.cpp)
add_executable(10-2 Chapter7_Tree/OJ/10-2.cpp)
add_executable(TEMP1 TEMP/TEMP2.cpp)
add_executable(TEMP2 TEMP/TEMP2.cpp)
add_executable(20181120_1 StudentWorks/20181120_1.cpp)
add_executable(20181120_2 StudentWorks/20181120_2.cpp)

add_executable(11-1 Chapter8_Graph/OJ/11-1.cpp)
add_executable(20181127_1 StudentWorks/20181127_1.cpp)
add_executable(20181127_2 StudentWorks/20181127_2.cpp)
add_executable(11-2 Chapter8_Graph/OJ/11-2.cpp)
add_executable(11-3 Chapter8_Graph/OJ/11-3.cpp)
add_executable(11-4 Chapter8_Graph/OJ/11-4.cpp)