cmake_minimum_required(VERSION 3.3)
project(Chapter3 C)

add_executable(SequenceStack_1 SequenceStack/SequenceStack_1.c)
add_executable(LinkStack_1 LinkStack/LinkStack_1.c)
add_executable(BracketMatching BracketMatching/BracketMatching.c LineEdit/LineEdit.c)
add_executable(LineEdit LineEdit/LineEdit.c)
add_executable(InfixExpression ExpressionCaculation/InfixExpression.c)
add_executable(ExpressionCaculation_1 ExpressionCaculation/ExpressionCaculation_1.c)
add_executable(NumberConvertion_1 NumberConvertion/NumberConvertion_1.c)